examples/test/testpolicy9636.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9636
  namespace: namespace212
spec:
  podSelector:
    matchLabels:
      key6: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value48
          key31: value18
          key46: value48
      podSelector:
        matchLabels:
          key13: value38
